Update Dockerfile and Schedule.java